--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "test-camera",
+  "name": "toksik-iliski-testi",
+  "owner": "zaferayan",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +10,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.11",
+    "@expo/webpack-config": "^18.0.1",
+    "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
+    "expo-face-detector": "~12.2.0",
+    "expo-media-library": "~15.2.3",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.6",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
